--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>{% img left /images/leveille-headshot.png 90 90 %}Web developer for the <a href="http://nationalpriorities.org">National Priorities Project</a>.  Living with 3 beautiful ladies and living life in Soutern Maine.</p>
 </section>
