Updated meta tags and added G+

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -7,6 +7,8 @@
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ desc }}">
   <meta name="twitter:image" content="{{ image }}">
+  <meta name="twitter:site" content="@jleveille">
+  <meta name="twitter:creator" content="@jleveille">
 
   <!-- Facebook OG Tags -->
   <meta property="fb:admins" content="1753588182"/>
