--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,5 +2,6 @@
   <li><a href="{{ root_url }}/">Home</a></li>
   <li><a href="{{ root_url }}/about">About</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/portfolio/">Portfolio</a></li>
   <li><a href="{{ root_url }}/projects/">Projects</a></li>
 </ul>
